Resizing and first featurette, still playing around

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         .carousel-item svg {
             min-height: 300px; /* Adjust this value as needed */
         }
+
+        .carousel-container {
+            padding-top: 15px;
+            padding-bottom: 20px;
+        }
     </style>
 </head>
 <body class="p-3 m-0 border-0 bd-example m-0 border-0">
@@ -50,6 +55,7 @@
 </nav>
 
 <!-- carousel feature -->
+<div class="carousel-container">
 <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1" aria-current="true"></button>
@@ -80,7 +86,7 @@
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
             <div class="container">
                 <div class="carousel-caption text-end">
-                    <h1>Fun Competitions with a Welcoming Family</h1>
+                    <h1>A Competitive and Welcoming Family</h1>
                     <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
                 </div>
             </div>
@@ -94,6 +100,17 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
+</div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4 text-center">
+            <img class="bd-placeholder-img rounded-circle mx-auto" width="140" height="140" src="horst.jpeg" alt="Placeholder">
+            <h2 class="fw-normal">Host Daichendt</h2>
+            <p>Placeholder: Head advisor of the River Bluff High School Swamp Bots and sponsor.</p>
+            <p><a class="btn btn-secondary" href="#">More details »</a></p>
+        </div>
+    </div>
 </div>
 </body>
 </html>
