--- a/index.html
+++ b/index.html
@@ -13,28 +13,24 @@
 <body class="m-0 border-0">
 
 <!-- navbar -->
-<nav class="navbar navbar-expand-md fixed-top bg-light">
+<nav class="navbar navbar-expand-xxl fixed-top bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="">
-            <img src="Swamp-Bots-Team-logo-768x1062-removebg.png" alt="Bootstrap logo"
-                 width="150" height="75">
+            <img src="Swamp-Bots-Team-logo-768x1062-removebg.png" alt="Bootstrap logo" width="150" height="75">
         </a>
 
-        <!-- Hamburger menu (visible on small screens) -->
-        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav5"
-                aria-controls="navbarNav5" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav5" aria-controls="navbarNav5" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <!-- Navbar items (collapsible on mobile, inline on desktop) -->
-        <!-- TODO make so they dropdown when hovered not just clicked -->
         <div class="collapse navbar-collapse" id="navbarNav5">
             <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <!-- About Dropdown -->
+                <li class="nav-item dropdown collapsed">
+                    <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="collapse" data-bs-target="#aboutDropdownMenu" aria-expanded="false">
                         About
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                    <ul class="dropdown-menu collapse" id="aboutDropdownMenu" data-bs-parent="#navbarNav5">
                         <li><a class="dropdown-item" href="#">Our Advisors</a></li>
                         <li><a class="dropdown-item" href="#">River Bluff High School</a></li>
                         <li><a class="dropdown-item" href="#">Lexington 1 District</a></li>
@@ -42,31 +38,33 @@
                     </ul>
                 </li>
 
+                <!-- VEX Robotics Dropdown -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="vexDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle collapsed" href="#" id="vexDropdown" role="button" data-bs-toggle="collapse" data-bs-target="#vexDropdownMenu" aria-expanded="false">
                         VEX Robotics
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="vexDropdown">
+                    <ul class="dropdown-menu collapse" id="vexDropdownMenu" data-bs-parent="#navbarNav5">
                         <li><a class="dropdown-item" href="#">What's VEX?</a></li>
                         <li><a class="dropdown-item" href="#">Annual Game</a></li>
                     </ul>
                 </li>
 
+                <!-- Resources Dropdown -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="resourcesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle collapsed" href="#" id="resourcesDropdown" role="button" data-bs-toggle="collapse" data-bs-target="#resourcesDropdownMenu" aria-expanded="false">
                         Resources
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="resourcesDropdown">
+                    <ul class="dropdown-menu collapse" id="resourcesDropdownMenu" data-bs-parent="#navbarNav5">
                         <li><a class="dropdown-item" href="#">Team Resources</a></li>
                         <li><a class="dropdown-item" href="#">Volunteering</a></li>
                         <li><a class="dropdown-item" href="#">Forms</a></li>
                     </ul>
                 </li>
 
+                <!-- Other Links -->
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sponsor Us!</a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link" href="#">Upcoming Events</a>
                 </li>
