Desktop main page jumbo WIP

--- a/index.html
+++ b/index.html
@@ -27,50 +27,81 @@
             <ul class="navbar-nav">
                 <!-- About Dropdown -->
                 <li class="nav-item dropdown collapsed">
-                    <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="collapse" data-bs-target="#aboutDropdownMenu" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle fw-bold" href="#" id="aboutDropdown" role="button" data-bs-toggle="collapse" data-bs-target="#aboutDropdownMenu" aria-expanded="false">
                         About
                     </a>
                     <ul class="dropdown-menu collapse" id="aboutDropdownMenu" data-bs-parent="#navbarNav5">
-                        <li><a class="dropdown-item" href="#">Our Advisors</a></li>
-                        <li><a class="dropdown-item" href="#">River Bluff High School</a></li>
-                        <li><a class="dropdown-item" href="#">Lexington 1 District</a></li>
-                        <li><a class="dropdown-item" href="#">Our Teams</a></li>
+                        <li><a class="dropdown-item fw-bold" href="#">Our Advisors</a></li>
+                        <li><a class="dropdown-item fw-bold" href="#">River Bluff High School</a></li>
+                        <li><a class="dropdown-item fw-bold" href="#">Lexington 1 District</a></li>
+                        <li><a class="dropdown-item fw-bold" href="#">Our Teams</a></li>
                     </ul>
                 </li>
 
                 <!-- VEX Robotics Dropdown -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle collapsed" href="#" id="vexDropdown" role="button" data-bs-toggle="collapse" data-bs-target="#vexDropdownMenu" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle collapsed fw-bold" href="#" id="vexDropdown" role="button" data-bs-toggle="collapse" data-bs-target="#vexDropdownMenu" aria-expanded="false">
                         VEX Robotics
                     </a>
                     <ul class="dropdown-menu collapse" id="vexDropdownMenu" data-bs-parent="#navbarNav5">
-                        <li><a class="dropdown-item" href="#">What's VEX?</a></li>
-                        <li><a class="dropdown-item" href="#">Annual Game</a></li>
+                        <li><a class="dropdown-item fw-bold" href="#">What's VEX?</a></li>
+                        <li><a class="dropdown-item fw-bold" href="#">Annual Game</a></li>
                     </ul>
                 </li>
 
                 <!-- Resources Dropdown -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle collapsed" href="#" id="resourcesDropdown" role="button" data-bs-toggle="collapse" data-bs-target="#resourcesDropdownMenu" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle collapsed fw-bold" href="#" id="resourcesDropdown" role="button" data-bs-toggle="collapse" data-bs-target="#resourcesDropdownMenu" aria-expanded="false">
                         Resources
                     </a>
                     <ul class="dropdown-menu collapse" id="resourcesDropdownMenu" data-bs-parent="#navbarNav5">
-                        <li><a class="dropdown-item" href="#">Team Resources</a></li>
-                        <li><a class="dropdown-item" href="#">Volunteering</a></li>
-                        <li><a class="dropdown-item" href="#">Forms</a></li>
+                        <li><a class="dropdown-item fw-bold" href="#">Team Resources</a></li>
+                        <li><a class="dropdown-item fw-bold" href="#">Volunteering</a></li>
+                        <li><a class="dropdown-item fw-bold" href="#">Forms</a></li>
                     </ul>
                 </li>
 
                 <!-- Other Links -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sponsor Us!</a>
+                    <a class="nav-link fw-bold" href="#">Sponsor Us!</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Upcoming Events</a>
+                    <a class="nav-link fw-bold" href="#">Upcoming Events</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
+
+<!-- Main Content -->
+<div class="container-fluid main">
+    <!-- TODO Make background be a brunswick green PICTURE not just solid color -->
+    <div class="row pb-4">
+        <div class="col-2"></div>
+        <div class="col-7">
+            <h1 class="fw-bold fs-0">River Bluff Swamp Bots are Preparing Students to be Career Ready</h1>
+        </div>
+
+        <div class="col-3">
+            <!-- TODO Upcoming events -->
+            <!--
+                1. Lighter, thinner font
+                2. Smaller font size
+                3. Center of column, maybe more padding to right?
+              -->
+            <span class="fs-4">Upcoming Events</span>
+        </div>
+    </div>
+
+    <div class="row pb-5">
+        <div class="col-2"></div>
+        <div class="col-7">
+            <button type="button" class="btn bg-white fw-bold fs-4 rounded-5 px-4 py-2 main-button">Read more</button>
+        </div>
+        <div class="col-3"></div>
+    </div>
+</div>
+
 </body>
 </html>
