--- a/index.html
+++ b/index.html
@@ -75,22 +75,32 @@
 
 
 <!-- Main Content -->
-<div class="container-fluid main">
+<div class="container-fluid main pb-6">
     <!-- TODO Make background be a brunswick green PICTURE not just solid color -->
-    <div class="row pb-4">
+    <div class="row pb-4 position-relative">
         <div class="col-2"></div>
         <div class="col-7">
             <h1 class="fw-bold fs-0">River Bluff Swamp Bots are Preparing Students to be Career Ready</h1>
         </div>
 
-        <div class="col-3">
-            <!-- TODO Upcoming events -->
-            <!--
-                1. Lighter, thinner font
-                2. Smaller font size
-                3. Center of column, maybe more padding to right?
-              -->
-            <span class="fs-4">Upcoming Events</span>
+        <div class="col-2 position-absolute top-0 end-0 me-4">
+            <!-- Uniform font (size) ?-->
+            <h3 class="text-muted fs-6 fw-bold mb-4">Upcoming Events</h3>
+            <!-- span for each event + date? -->
+            <div class="event mb-5">
+                <p class="fs-6 ep fw-medium" style="margin-bottom: 0;">Event .... swamp bots competing against many teams... championship</p>
+                <p class="text-muted fs-6 fw-medium">October 20, 2024</p>
+            </div>
+
+            <div class="event mb-5">
+                <p class="fs-6 ep fw-medium" style="margin-bottom: 0;">Event .... swamp bots competing against many teams... championship</p>
+                <p class="text-muted fs-6 fw-medium">October 20, 2024</p>
+            </div>
+
+            <div class="event mb-5">
+                <p class="fs-6 ep fw-medium" style="margin-bottom: 0;">Event .... swamp bots competing against many teams... championship</p>
+                <p class="text-muted fs-6 fw-medium">October 20, 2024</p>
+            </div>
         </div>
     </div>
 
