--- a/index.html
+++ b/index.html
@@ -75,42 +75,43 @@
 
 
 <!-- Main Content -->
-<div class="container-fluid main pb-6">
-    <!-- TODO Make background be a brunswick green PICTURE not just solid color -->
-    <div class="row pb-4 position-relative">
-        <div class="col-2"></div>
-        <div class="col-7">
-            <h1 class="fw-bold fs-0">River Bluff Swamp Bots are Preparing Students to be Career Ready</h1>
+<div class="container-fluid main vh-100">
+    <div class="row pb-4">
+        <div class="col-2 upcoming-events me-5"> <!-- Removed extra styles from here -->
+            <h3 class="text-muted fs-6 fw-bold mt-4 mb-4">Upcoming Events</h3>
+            <div class="event mb-5">
+                <p class="fs-6 ep fw-medium" style="margin-bottom: 0;">Event .... swamp bots competing against many teams... championship</p>
+                <p class="text-muted fs-6 fw-medium">October 20, 2024</p>
+            </div>
+
+            <div class="event mb-5">
+                <p class="fs-6 ep fw-medium" style="margin-bottom: 0;">Event .... swamp bots competing against many teams... championship</p>
+                <p class="text-muted fs-6 fw-medium">October 20, 2024</p>
+            </div>
+
+            <div class="event mb-5">
+                <p class="fs-6 ep fw-medium" style="margin-bottom: 0;">Event .... swamp bots competing against many teams... championship</p>
+                <p class="text-muted fs-6 fw-medium">October 20, 2024</p>
+            </div>
         </div>
 
-        <div class="col-2 position-absolute top-0 end-0 me-4">
-            <!-- Uniform font (size) ?-->
-            <h3 class="text-muted fs-6 fw-bold mb-4">Upcoming Events</h3>
-            <!-- span for each event + date? -->
-            <div class="event mb-5">
-                <p class="fs-6 ep fw-medium" style="margin-bottom: 0;">Event .... swamp bots competing against many teams... championship</p>
-                <p class="text-muted fs-6 fw-medium">October 20, 2024</p>
-            </div>
-
-            <div class="event mb-5">
-                <p class="fs-6 ep fw-medium" style="margin-bottom: 0;">Event .... swamp bots competing against many teams... championship</p>
-                <p class="text-muted fs-6 fw-medium">October 20, 2024</p>
-            </div>
-
-            <div class="event mb-5">
-                <p class="fs-6 ep fw-medium" style="margin-bottom: 0;">Event .... swamp bots competing against many teams... championship</p>
-                <p class="text-muted fs-6 fw-medium">October 20, 2024</p>
-            </div>
+        <div class="col-7">
+            <h1 class="fw-bold fs-0">River Bluff Swamp Bots are Preparing Students to be Career Ready</h1>
         </div>
     </div>
 
     <div class="row pb-5">
-        <div class="col-2"></div>
+        <div class="col-2 upcoming-events me-5"></div>
         <div class="col-7">
-            <button type="button" class="btn bg-white fw-bold fs-4 rounded-5 px-4 py-2 main-button">Read more</button>
+            <button type="button" class="btn bg-white fw-bold fs-5 rounded-5 px-4 py-2 main-button main-button-margin">Read more</button>
         </div>
         <div class="col-3"></div>
     </div>
+</div>
+
+
+<div class="container-fluid bg-light" style="height: 700px;">
+    <div class="row"></div>
 </div>
 
 </body>
