Added small stats page

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
 
 
-<div class="container-fluid bg-light" id="read-more-target" style="height: 700px">
+<div class="container-fluid mb-5" id="read-more-target" style="height: 700px">
     <div class="row ml-main me-main mb-5">
         <div class="col-5 mt-6">
             <h1 class="fw-bold fs-main-h mb-4">Swamp Bots</h1>
@@ -271,6 +271,40 @@
             <h1 class="fw-bold fs-3 mb-4">World Renowned</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget erat
                 vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid stats" style="height: 500px;">
+    <div class="row ml-main me-main">
+        <div class="col-6 mt-5">
+            <h1 class="fw-bold fs-stats stats-text">A Legacy to be Remembered</h1>
+            <blockquote class="fw-bold mt-4">
+                Over the 10 years of competing on the international VRC stage, our club has competed at all levels of competition with a legacy like no other.
+            </blockquote>
+        </div>
+
+        <div class="col-6 mt-5 text-center">
+            <div class="row">
+                <div class="col-6 p-3">
+                    <h1 class="stats-header fw-bold">10</h1>
+                    <h3 class="stats-caption fw-bold">Years</h3>
+                </div>
+                <div class="col-6 p-3">
+                    <h1 class="stats-header fw-bold">30</h1>
+                    <h3 class="stats-caption fw-bold">Members</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 p-3">
+                    <h1 class="stats-header fw-bold">5 </h1>
+                    <h3 class="stats-caption fw-bold">Awards</h3>
+                </div>
+                <div class="col-6 p-3">
+                    <h1 class="stats-header fw-bold">20</h1>
+                    <h3 class="stats-caption fw-bold">Competitions</h3>
+                </div>
+            </div>
         </div>
     </div>
 </div>
