added FAQ quick section

--- a/index.html
+++ b/index.html
@@ -282,6 +282,9 @@
             <blockquote class="fw-bold mt-4">
                 Over the 10 years of competing on the international VRC stage, our club has competed at all levels of competition with a legacy like no other.
             </blockquote>
+
+            <!-- TODO: Button goes to legacy page -->
+            <button class="fw-bold">Learn More</button>
         </div>
 
         <div class="col-6 mt-5 text-center">
@@ -305,6 +308,28 @@
                     <h3 class="stats-caption fw-bold">Competitions</h3>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+
+<!-- FAQ -->
+<div class="container-fluid">
+    <div class="row ml-main me-main mt-6 text-center">
+        <h1 class="text-center mb-5">Frequently Asked Questions</h1>
+        <div class="col-4">
+            <h2>I'm new to robotics, where can I start?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget erat
+                vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
+        </div>
+        <div class="col-4">
+            <h2>When and where do you meet?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget erat
+                vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
+        </div>
+        <div class="col-4">
+            <h2>What is a VEX competition like?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget erat
+                vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
         </div>
     </div>
 </div>
